# advent_of_code_2020

./: CMakeLists.txt  README.md
include/: catch2
lib/: CMakeLists.txt
resources/: CMakeLists.txt  resources.hpp.in
resources/days/: 9.txt
resources/tests/: 13_b_2.txt  13_b_4.txt  16_a_1.txt  16_b_2.txt  18_a_2.txt  19_a_2.txt  19_a_3.txt  19_a_4.txt  5_a_1.txt  5_a_2.txt  5_a_3.txt  5_a_4.txt
src/: Ranges.hpp  StringView.hpp  day_1.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_18.cpp  day_19.cpp  day_2.cpp  day_3.cpp  day_4.cpp  day_5.cpp  day_6.cpp  day_7.cpp  day_8.cpp  day_9.cpp  main.cpp  narrow.hpp  shortcuts.hpp  utils.cpp  utils.hpp
tests/: main.cpp
